--- a/Jupyter Lab Analysis/DataPreperation.ipynb
+++ b/Jupyter Lab Analysis/DataPreperation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "id": "cb4572e1-124e-43b0-b133-d95d989f9d04",
    "metadata": {},
    "outputs": [
@@ -49,38 +49,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>1954-07-01</td>\n",
-       "      <td>0.80</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>1948-01-01</td>\n",
+       "      <td>3.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>1954-08-01</td>\n",
-       "      <td>1.22</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>1948-02-01</td>\n",
+       "      <td>3.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>1954-09-01</td>\n",
-       "      <td>1.07</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>1948-03-01</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>1954-10-01</td>\n",
-       "      <td>0.85</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>1948-04-01</td>\n",
+       "      <td>3.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>1954-11-01</td>\n",
-       "      <td>0.83</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>2025-01-10</td>\n",
+       "      <td>1948-05-01</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -88,26 +88,26 @@
       ],
       "text/plain": [
        "  realtime_start realtime_end        date  value\n",
-       "0     2025-01-07   2025-01-07  1954-07-01   0.80\n",
-       "1     2025-01-07   2025-01-07  1954-08-01   1.22\n",
-       "2     2025-01-07   2025-01-07  1954-09-01   1.07\n",
-       "3     2025-01-07   2025-01-07  1954-10-01   0.85\n",
-       "4     2025-01-07   2025-01-07  1954-11-01   0.83"
+       "0     2025-01-10   2025-01-10  1948-01-01    3.4\n",
+       "1     2025-01-10   2025-01-10  1948-02-01    3.8\n",
+       "2     2025-01-10   2025-01-10  1948-03-01    4.0\n",
+       "3     2025-01-10   2025-01-10  1948-04-01    3.9\n",
+       "4     2025-01-10   2025-01-10  1948-05-01    3.5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"FEDRates.csv\")\n",
+    "df = pd.read_csv(\"UnemployemenrRate.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "e4035120-1c00-4873-b22e-fb3f13295fdb",
    "metadata": {},
    "outputs": [
@@ -139,28 +139,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1954-07-01</td>\n",
-       "      <td>0.80</td>\n",
+       "      <td>1948-01-01</td>\n",
+       "      <td>3.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1954-08-01</td>\n",
-       "      <td>1.22</td>\n",
+       "      <td>1948-02-01</td>\n",
+       "      <td>3.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1954-09-01</td>\n",
-       "      <td>1.07</td>\n",
+       "      <td>1948-03-01</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1954-10-01</td>\n",
-       "      <td>0.85</td>\n",
+       "      <td>1948-04-01</td>\n",
+       "      <td>3.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1954-11-01</td>\n",
-       "      <td>0.83</td>\n",
+       "      <td>1948-05-01</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -168,14 +168,14 @@
       ],
       "text/plain": [
        "         date  value\n",
-       "0  1954-07-01   0.80\n",
-       "1  1954-08-01   1.22\n",
-       "2  1954-09-01   1.07\n",
-       "3  1954-10-01   0.85\n",
-       "4  1954-11-01   0.83"
+       "0  1948-01-01    3.4\n",
+       "1  1948-02-01    3.8\n",
+       "2  1948-03-01    4.0\n",
+       "3  1948-04-01    3.9\n",
+       "4  1948-05-01    3.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "46ec27c0-1b92-464d-a4a6-0e744b8bd13b",
    "metadata": {},
    "outputs": [
@@ -196,14 +196,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 846 entries, 0 to 845\n",
+      "RangeIndex: 924 entries, 0 to 923\n",
       "Data columns (total 2 columns):\n",
       " #   Column  Non-Null Count  Dtype  \n",
       "---  ------  --------------  -----  \n",
-      " 0   date    846 non-null    object \n",
-      " 1   value   846 non-null    float64\n",
+      " 0   date    924 non-null    object \n",
+      " 1   value   924 non-null    float64\n",
       "dtypes: float64(1), object(1)\n",
-      "memory usage: 13.3+ KB\n"
+      "memory usage: 14.6+ KB\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "id": "74a4b451-88b1-432f-ac2c-761483e2f1f2",
    "metadata": {},
    "outputs": [
@@ -245,28 +245,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1954-07-01</td>\n",
-       "      <td>0.80</td>\n",
+       "      <td>1948-01-01</td>\n",
+       "      <td>3.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1954-08-01</td>\n",
-       "      <td>1.22</td>\n",
+       "      <td>1948-02-01</td>\n",
+       "      <td>3.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1954-09-01</td>\n",
-       "      <td>1.07</td>\n",
+       "      <td>1948-03-01</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1954-10-01</td>\n",
-       "      <td>0.85</td>\n",
+       "      <td>1948-04-01</td>\n",
+       "      <td>3.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1954-11-01</td>\n",
-       "      <td>0.83</td>\n",
+       "      <td>1948-05-01</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -274,14 +274,14 @@
       ],
       "text/plain": [
        "        date  value\n",
-       "0 1954-07-01   0.80\n",
-       "1 1954-08-01   1.22\n",
-       "2 1954-09-01   1.07\n",
-       "3 1954-10-01   0.85\n",
-       "4 1954-11-01   0.83"
+       "0 1948-01-01    3.4\n",
+       "1 1948-02-01    3.8\n",
+       "2 1948-03-01    4.0\n",
+       "3 1948-04-01    3.9\n",
+       "4 1948-05-01    3.5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "id": "ab3c478c-cfe2-4517-a679-f0d862e122ef",
    "metadata": {},
    "outputs": [
@@ -302,14 +302,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 846 entries, 0 to 845\n",
+      "RangeIndex: 924 entries, 0 to 923\n",
       "Data columns (total 2 columns):\n",
       " #   Column  Non-Null Count  Dtype         \n",
       "---  ------  --------------  -----         \n",
-      " 0   date    846 non-null    datetime64[ns]\n",
-      " 1   value   846 non-null    float64       \n",
+      " 0   date    924 non-null    datetime64[ns]\n",
+      " 1   value   924 non-null    float64       \n",
       "dtypes: datetime64[ns](1), float64(1)\n",
-      "memory usage: 13.3 KB\n"
+      "memory usage: 14.6 KB\n"
      ]
     }
    ],
@@ -319,7 +319,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "252e7b27-ffc3-470a-a594-295e382f3faf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "7fc62ff5-2001-437b-9bc8-5013a25c81fb",
    "metadata": {},
    "outputs": [
@@ -331,7 +339,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "id": "12811709-69b0-4ac0-9d2e-dd8ab48f8383",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(846, 2)"
+       "(924, 2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,18 +371,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "id": "58a76830-0ac2-4b5b-9210-c7e3651e00c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Cleaned/FEDRatesCleaned.csv\")"
+    "df.to_csv(\"Cleaned/UnemployemenrRateCleaned.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "56dbd6e0-7692-43e5-b737-3a9d60aa0469",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'value'], dtype='object')"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56dbd6e0-7692-43e5-b737-3a9d60aa0469",
+   "id": "21ea0530-e731-4379-adf0-3616a619c227",
    "metadata": {},
    "outputs": [],
    "source": []
